# PNG-corruption

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ccpp.yml  corruption.yml  run-increment.yml  run.yml  tests.yml
corruption/: CMakeLists.txt
corruption/src/chunk/: chunk.h  crc.cpp  distortions.cpp
docs/: ascii-increment.md  ascii-shift.md  features.md  png-corruption.md  todo.md
mandelbrot-test/: CMakeLists.txt
src/: CMakeLists.txt  corruption.cpp  func.cpp  header.h  img-headers.cpp  increment.cpp  main.cpp  shift.cpp
src/argument/: argument.cpp  argument.h
src/ascii/: increment.cpp  increment.h  shift.cpp
src/chunk/: chunk.cpp  chunk.h  chunk.md  crc.cpp
src/distortion/: increment-func.cpp  shift-func.cpp
src/image/: image.cpp  image.h
src/increment/: func.cpp  increment.cpp  increment.h
